test/language/spec/syntax/invalid/class_without_visibility.topo
// TEST: class members without visibility section should be rejected
// EXPECT-ERROR: visibility

namespace app {
  public:
    class Widget {
      void render();
      int width;
    }
}
